--- a/conf/defaults.ini
+++ b/conf/defaults.ini
@@ -8,6 +8,11 @@ app_mode = ${APP_MODE}
 
 application_name= ${APP_NAME}
 
+resource_url= ${RESOURCE_URL}
+resource_label= ${RESOURCE_LABEL}
+resource_token= ${RESOURCE_TOKEN}
+nats_url = ${NATS_URL}
+
 # instance name, defaults to HOSTNAME environment variable value or hostname if HOSTNAME var is empty
 instance_name = ${HOSTNAME}
 
