--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "public/vendor/**/*.ts",
     "packages/jaeger-ui-components/typings",
     "packages/grafana-data/typings",
-    "packages/grafana-ui/src/types"
+    "packages/grafana-ui/src/types",
+    "public/app/features/groups/UserListtsx"
   ]
 }
