--- a/package.json
+++ b/package.json
@@ -344,6 +344,7 @@
     "rc-drawer": "4.4.3",
     "rc-slider": "9.7.5",
     "rc-time-picker": "3.7.3",
+    "rc-tree": "5.6.5",
     "re-resizable": "6.9.9",
     "react": "17.0.2",
     "react-beautiful-dnd": "13.1.0",
