Storage: externalize `allow_unsanitized_svg_upload` (#52703)

--- a/conf/defaults.ini
+++ b/conf/defaults.ini
@@ -1266,3 +1266,10 @@ max_crawl_duration =
 # Minimum interval between two subsequent scheduler runs. Default is 12h.
 # This setting should be expressed as a duration. Examples: 10s (seconds), 1m (minutes).
 scheduler_interval =
+
+
+#################################### Storage ################################################
+
+[storage]
+# Allow uploading SVG files without sanitization.
+allow_unsanitized_svg_upload = false
