Docs: Update docs for images in notifications (#52721)

--- a/conf/defaults.ini
+++ b/conf/defaults.ini
@@ -867,8 +867,8 @@ max_attempts = 3
 min_interval = 10s
 
 [unified_alerting.screenshots]
-# Enable screenshots in notifications. This option requires a remote HTTP image rendering service. Please
-# see [rendering] for further configuration options.
+# Enable screenshots in notifications. This option requires the Grafana Image Renderer plugin.
+# For more information on configuration options, refer to [rendering].
 capture = false
 
 # The maximum number of screenshots that can be taken at the same time. This option is different from
