Revert "Explore: Add Mixed Datasource (#51605)" (#52889)
This reverts commit e2258120e742b31ecde50e8de93544220a0762a3.

--- a/conf/defaults.ini
+++ b/conf/defaults.ini
@@ -1208,7 +1208,7 @@ lokiQueryBuilder = true
 # Experimental Explore to Dashboard workflow
 explore2Dashboard = true
 
-# Command Palette
+# Experimental Command Palette
 commandPalette = true
 
 # Use dynamic labels in CloudWatch datasource
